Fix spacing between elements

--- a/sass-styles.scss
+++ b/sass-styles.scss
@@ -16,7 +16,7 @@ $break-small: 425px;
     @media only screen and (max-width: $break-small) {@content}
   }
   @else if $media == medium-screens {
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) {@content}
+    @media only screen and (min-width: $break-small + 1) {@content}
   }
   @else if $media == wide-screens {
     @media only screen and (min-width: $break-large) {@content}
@@ -95,7 +95,7 @@ body {
     box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
     #nav {
       height: 100%;
-      width: 25%;
+      width: 35%;
       display: inline-block;
       position: relative;
       .menu-list {
@@ -117,7 +117,7 @@ body {
           display: inline-block;
           font-size: .8em;
           font-weight: 700;
-          margin: 1%;
+          margin: 0.75%;
           @include respond-to(xtra-wide) {font-size: 1.2em;}
           &:hover {
             & > a {
@@ -174,7 +174,7 @@ body {
         top: -999px;
         left: -999px;
         &:checked ~ul, &:checked ~ul li ul {
-          display: block !important;
+          display: block;
           @include respond-to(wide-screens) {
             display: -webkit-box;
             display: -moz-box;
@@ -193,17 +193,17 @@ body {
         position: relative;
         display: block;
         min-height: 2em;
-        padding: .5em;
+        padding-left: 5%;
         font-size: 1.1em;
         margin: 0;
         cursor: pointer;
         line-height: 2em;
       }
-      label:after {
-        position: absolute;
+      label:before {
+        float: left;
         right: 1em;
         top: .2em;
-        content: "\2261";
+        content: "\2261 \00a0";
         font-size: 1.8em;
       }
       @include respond-to(wide-screens) {
@@ -263,10 +263,10 @@ body {
 
     .search-form {
       width: 60%;
-      padding: 2% 0 2% 1%;;
+      padding: 1.5% 0 2% 2%;;
       float: right;
       @include respond-to(wide-screens) {
-        width: 33%;
+        width: 32%;
       }
       form {
         height: 100%;
@@ -303,19 +303,22 @@ body {
       .blog-card {
         width: 100%;
         float: left;
-        padding: 5% 0;
+        margin: 6% 0;
         border-bottom: 1px solid $border;
+        padding-bottom: 6%;
         position: relative;
         .icon-wrapper {
           width: 40%;
-          @include centered(true, false);
+          @include respond-to(handhelds) {
+            @include centered(true, false);
+          }
           @include respond-to(wide-screens) {left: 20%;}
           .blog-icon {
-            width: 100%;
-            margin: 0 auto;
-            @include respond-to(wide-screens) {width: 40%; float: left;}
+            @include respond-to(medium-screens) {width: 40%; float: left;}
             .blog-pic {
-              background-image: url("http://placehold.it/200x150");
+              background-image: url("pic1.png");
+              background-size: cover;
+              background-position: center;
               display: inline-block;
               position: relative;
               width: 10em;
@@ -339,8 +342,8 @@ body {
         }
         .card-content {
           width: 100%;
-          @include respond-to(wide-screens) {
-            width: 70%;
+          @include respond-to(medium-screens) {
+            width: 69%;
             display: inline-block;
             float: right;
           }
@@ -348,7 +351,7 @@ body {
             font-size: 2em;
             margin-top: 4%;
             margin-bottom: 1%;
-            @include respond-to(wide-screens) {margin-top: 0%;}
+            @include respond-to(medium-screens) {margin-top: 0%;}
           }
           p span a {
             text-decoration: none;
@@ -372,9 +375,11 @@ body {
       .side-pic {
         border: 2px solid black;
         width: 98%;
-        height: 20em;
+        height: 15em;
         margin-bottom: 7%;
-        background-image: url("http://placehold.it/400x300")
+        background-image: url("pic2.png");
+        background-size: cover;
+        background-position: center;
       }
     }
   }
